# qtqml-framework

./: .cmake-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh  run.sh
doc/: CMakeLists.txt  Doxygen.in
include/: app_abstract.h  app_base.h  app_configuration.h  app_dbus.h  app_engine.h  app_factory.h  app_manager.h  app_popup.h  app_view.h
qml/: LoaderContainer.qml  LoaderScreen.qml
src/configuration/: app_configuration.cpp
src/dbus/: adaptor.cpp  proxy.cpp
src/manager/: app_abstract.cpp  app_engine.cpp  app_manager.cpp
src/view/: app_popup.cpp  app_view.cpp  view_state.cpp
test/: CMakeLists.txt  DemoApp.h  main.cpp  qml.qrc
test/system-ui/: main.qml
